--- a/client/webserver/site/src/css/market.scss
+++ b/client/webserver/site/src/css/market.scss
@@ -100,7 +100,7 @@ div[data-handler=markets] {
     }
 
     .ico-disconnected {
-      color: $warning;
+      color: var(--text-warning);
     }
   }
 
@@ -350,8 +350,8 @@ div[data-handler=markets] {
 
       &:hover,
       &.selected {
-        border-color: $warning;
-        color: $warning;
+        border-color: var(--text-warning);
+        color: var(--text-warning);
       }
     }
   }
@@ -500,13 +500,13 @@ div[data-handler=markets] {
 
   #leftHider,
   #marketReopener {
-    .ico-arrowback,
+    .ico-arrowleft,
     .ico-arrowright {
       transform: scaleX(0.5);
       opacity: 0.5;
     }
 
-    &:hover .ico-arrowback,
+    &:hover .ico-arrowleft,
     &:hover .ico-arrowright {
       opacity: 1;
     }
