--- a/client/webserver/site/src/css/utilities.scss
+++ b/client/webserver/site/src/css/utilities.scss
@@ -1,7 +1,3 @@
-.flex-column {
-  flex-direction: column;
-}
-
 .flex-grow-1 {
   flex-grow: 1;
 }
@@ -225,9 +221,13 @@ div.clear {
 }
 
 .text-warning {
-  color: $warning;
+  color: var(--text-warning);
 }
 
 .text-buycolor {
   color: var(--buy-color);
+}
+
+.text-sellcolor {
+  color: var(--sell-color);
 }
