--- a/client/webserver/site/src/html/bodybuilder.tmpl
+++ b/client/webserver/site/src/html/bodybuilder.tmpl
@@ -68,7 +68,7 @@
         <div class="d-flex justify-content-center align-items-center px-1">
           <div class="note-indicator d-inline-block me-2"></div>
           <div class="note-subject flex-grow-1 d-inline-block fs16 demi"></div>
-          <span class="note-time nowrap pe-2"></span>
+          <span class="note-time text-nowrap pe-2"></span>
         </div>
         <div class="note-details fs15 px-3"></div>
       </div>
@@ -80,7 +80,7 @@
             <span data-tmpl="subject"></span>
             <span data-tmpl="details"></span>
           </div>
-          <span class="note-time nowrap"></span>
+          <span class="note-time text-nowrap"></span>
         </div>
       </div>
     </div>
