--- a/client/webserver/site/src/html/wallets.tmpl
+++ b/client/webserver/site/src/html/wallets.tmpl
@@ -1,5 +1,4 @@
 {{define "wallets"}}
-{{$passwordIsCached := .UserInfo.PasswordIsCached}}
 {{template "top" .}}
 <div id="main" data-handler="wallets" class="walletspage flex-grow-1 position-relative">
   <span class="me-2 connection ico-connection d-hide peers-table-icon" id="connectedIconTmpl"></span>
@@ -928,12 +927,12 @@
     {{- /* TICKET HISTORY */ -}}
     <form id="ticketHistoryForm" class="flex-center flex-column align-items-stretch">
       <div class="form-closer hoverbg"><span class="ico-cross"></span></div>
-      <header>
+      <header class="px-5">
         <span class="ico-ticket fs22 me-2 grey"></span>
         <span>[[[Ticket History]]]</span>
       </header>
-      <div>
-        <table id="ticketHistoryTable" class="row-border rounded3">
+      <div id="ticketHistoryTable">
+        <table class="row-border rounded3">
           <thead>
             <tr>
               <th>[[[Age]]]</th>
@@ -1090,9 +1089,8 @@
       </div>
     </form>
 
-
     {{- /* CSPP INFO */ -}}
-    <form id="mixingInfo" class="mw-425 p-3">
+    <form id="mixingInfo" class="mw-425 p-3 pt-4">
       <div class="form-closer"><span class="ico-cross"></span></div>
       <ul class="px-3 mb-0">
         <li>
