mm: Update pending event logs after run ends
When a market making run is ended, all orders and cancelled, but some of
these orders, deposits, and withdrawals may still be processing. This diff
updates  `MarketMaker.RunLogs` to check whether or not there are pending
events in the logs, and if so, update them with the latest state. The final
balance of the bot must also be updated to get correct P/L, so some
refactoring is done to simplify this. The `MarketMakingOverview` and
`MarketMakingEvents` are all updated to contain a `BalanceEffects` field.
When a pending event is updated, the final balances are updated by
the differences in the `BalanceEffects` of the old and new events. The
exchange adaptor is also updated to use `BalanceEffects` for each type of
event, making the code much simpler.

--- a/client/webserver/site/src/html/mmlogs.tmpl
+++ b/client/webserver/site/src/html/mmlogs.tmpl
@@ -28,15 +28,11 @@
     </div>
 
     <table id="eventsTable" class="my-3 striped row-hover compact border row-border">
-      <thead>
+      <thead id="eventsTableHeader">
         <th>[[[Time]]]</th>
         <th>[[[Type]]]</th>
         <th>[[[ID]]]</th>
-        <th>[[[base_change]]]</th>
-        <th>[[[quote_change]]]</th>
-        <th>[[[base_fees]]]</th>
-        <th>[[[quote_fees]]]</th>
-        <th>Sum USD</th>
+        <th id="sumUSDHeader">Sum USD</th>
         <th scope="col">[[[Details]]]</th>
       </thead>
       <tbody id="eventsTableBody">
@@ -44,10 +40,6 @@
           <td data-tmpl="time"></td>
           <td data-tmpl="eventType"></td>
           <td data-tmpl="eventID"></td>
-          <td data-tmpl="baseDelta"></td>
-          <td data-tmpl="quoteDelta"></td>
-          <td data-tmpl="baseFees"></td>
-          <td data-tmpl="quoteFees"></td>
           <td data-tmpl="sumUSD"></td>
           <td><span class="ico-open fs20 pointer mx-2" data-tmpl="details"></span></td>        
         </tr>
