app: Improve market making logs UI
Makes the UI look more similar to other pages, and also adds filtering and
pagination.

--- a/client/webserver/site/src/css/components.scss
+++ b/client/webserver/site/src/css/components.scss
@@ -291,6 +291,7 @@ div[data-handler=order],
 div[data-handler=orders],
 div[data-handler=register],
 div[data-handler=settings],
+div[data-handler=mmlogs],
 div[data-handler=wallets] {
   #forms>form:not(.plain) {
     border-radius: 5px;
