--- a/client/webserver/site/src/html/mmlogs.tmpl
+++ b/client/webserver/site/src/html/mmlogs.tmpl
@@ -1,6 +1,7 @@
 {{define "mmlogs"}}
 {{template "top" .}}
-<div id="main" data-handler="mmlogs" class="flex-grow-1 d-flex flex-column align-items-stretch stylish-overflow">
+<div id="main" data-handler="mmlogs" class="main w-100 d-block overflow-y-auto">
+    
   <div class="d-flex brdrbottom align-items-stretch">
     <div id="backButton" class="fs18 p-2 hoverbg pointer flex-center brdrright">
       <span class="ico-wide-headed-left-arrow fs28"></span>
@@ -8,68 +9,129 @@
     <div class="flex-center fs24 p-2 flex-grow-1">
       <span class="px-2">[[[logs_for]]] </span> 
       <img class="mini-icon" data-base-logo><img class="mini-icon" data-quote-logo><span data-base-ticker></span>-<span data-quote-ticker></span>
-       @  <span class="px-2" data-host></span>
+      @  <span class="px-2" data-host></span>
     </div>
   </div>
-  <div class="px-5 py-3 w-100">
-    <div class="d-flex flex-wrap">
-      <div class="order-datum border my-1 me-2">
-        <div class="border-bottom py-1 px-3">[[[start_time]]]</div>
-        <div id="startTime" class="border-bottom py-1 px-3"></div>
-      </div>
-      <div class="order-datum border my-1 me-2" id="endTimeBlock">
-        <div class="border-bottom py-1 px-3">[[[end_time]]]</div>
-        <div id="endTime" class="border-bottom py-1 px-3"></div>
-      </div>
-      <div class="order-datum border my-1 me-2">
-        <div class="border-bottom py-1 px-3">[[[profit_loss]]]</div>
-        <div class="py-1 px-3" id="profitLoss"></div>
-      </div>
+
+  <div class="w-100 d-flex justify-content-start">
+    <div class="flex-stretch-column justify-content-start">
+      <section class="py-1 px-3">
+        <table class="m-1">
+          <tbody>
+            <tr>
+              <td>[[[start_time]]]</td>
+              <td id="startTime"></td>
+            </tr>
+            <tr id="endTimeRow">
+              <td>[[[end_time]]]</td>
+              <td id="endTime"></td>
+            </tr>
+          </tbody>
+        </table>
+      </section>
+
+      <section class="py-2 px-3">
+        <table class="m-1 row-border">
+          <thead>
+            <tr>
+              <th>[[[Asset]]]</th>
+              <th>[[[balance_diff]]]</th>
+              <th>[[[usd_rate]]]</th>
+              <th>[[[usd_diff]]]</th>
+            </tr>
+          </thead>
+          <tbody id="performanceTableBody">
+            <tr id="performanceTableRowTmpl">
+              <td><img class="xclogo micro-icon me-1" data-tmpl="logo"><span data-tmpl="ticker"></span></td>
+              <td data-tmpl="diff"></td>
+              <td data-tmpl="fiatRate"></td>
+              <td data-tmpl="usdDiff"></td>
+            </tr>
+          </tbody>
+          <tfoot>
+            <tr>
+              <td colspan="3">[[[profit_loss]]]</td>
+              <td id="profitLoss"></td>
+            </tr>
+          </tfoot>
+        </table>
+      </section>
+
+      <section class="py-2 px-3">
+        <header>[[[filters]]]</header>
+        <div class="ps-2 pe-2">
+          <input id="dexSellsCheckbox" class="form-check-input" type="checkbox">
+          <label class="form-check-label">[[[dex_sell]]]</label>
+        </div>
+        <div class="ps-2 pe-2">
+          <input id="dexBuysCheckbox" class="form-check-input" type="checkbox">
+          <label class="form-check-label">[[[dex_buy]]]</label>
+        </div>
+        <div class="ps-2 pe-2">
+          <input id="cexSellsCheckbox" class="form-check-input" type="checkbox">
+          <label class="form-check-label">[[[cex_sell]]]</label>
+        </div>
+        <div class="ps-2 pe-2">
+          <input id="cexBuysCheckbox" class="form-check-input" type="checkbox">
+          <label class="form-check-label">[[[cex_buy]]]</label>
+        </div>
+        <div class="ps-2 pe-2">
+          <input id="depositsCheckbox" class="form-check-input" type="checkbox">
+          <label class="form-check-label">[[[deposit]]]</label>
+        </div>
+        <div class="ps-2 pe-2">
+          <input id="withdrawalsCheckbox" class="form-check-input" type="checkbox">
+          <label class="form-check-label">[[[withdrawal]]]</label>
+        </div>
+        <button id="filterButton" class="feature">[[[Apply]]]</button>
+      </section>
     </div>
 
-    <table id="eventsTable" class="my-3 striped row-hover compact border row-border">
-      <thead id="eventsTableHeader">
-        <th>[[[Time]]]</th>
-        <th>[[[Type]]]</th>
-        <th>[[[ID]]]</th>
-        <th id="sumUSDHeader">Sum USD</th>
-        <th scope="col">[[[Details]]]</th>
-      </thead>
-      <tbody id="eventsTableBody">
-        <tr id="eventTableRowTmpl">
-          <td data-tmpl="time"></td>
-          <td data-tmpl="eventType"></td>
-          <td data-tmpl="eventID"></td>
-          <td data-tmpl="sumUSD"></td>
-          <td><span class="ico-open fs20 pointer mx-2" data-tmpl="details"></span></td>        
-        </tr>
-      </tbody>
-    </table>
+    <section class="flex-grow-1">
+      <table id="eventsTable" class="striped row-hover row-border">
+        <thead id="eventsTableHeader">
+          <th>[[[Time]]]</th>
+          <th>[[[Type]]]</th>
+          <th>[[[ID]]]</th>
+          <th id="sumUSDHeader">Sum USD</th>
+          <th scope="col">[[[Details]]]</th>
+        </thead>
+        <tbody id="eventsTableBody">
+          <tr id="eventTableRowTmpl">
+            <td data-tmpl="time"></td>
+            <td data-tmpl="eventType"></td>
+            <td data-tmpl="eventID"></td>
+            <td data-tmpl="sumUSD"></td>
+            <td><span class="ico-open fs20 pointer" data-tmpl="details"></span></td>        
+          </tr>
+        </tbody>
+      </table>
+    </section>
   </div>
-
+  
   <div id="forms" class="d-hide">
-    <form id="dexOrderDetailsForm" class="position-relative flex-center flex-column fs20 d-hide">
+    <form id="dexOrderDetailsForm" class="position-relative flex-stretch-column d-hide">
       <div class="form-closer hoverbg"><span class="ico-cross"></span></div>
-      <header>
-          [[[dex_order_details]]]
-      </header>
-      <div class="flex-stretch-column">
-        <span class="d-flex justify-content-between w-100">
-          <span>[[[ID]]]</span>
-          <span id="dexOrderID"></span>
-        </span>
-        <span class="d-flex justify-content-between w-100">
-          <span>[[[Rate]]]</span>
-          <span id="dexOrderRate"></span>
-        </span>
-        <span class="d-flex justify-content-between w-100">
-          <span>[[[Quantity]]]</span>
-          <span id="dexOrderQty"></span>
-        </span>
-        <span class="d-flex justify-content-between w-100">
-          <span>[[[Side]]]</span>
-          <span id="dexOrderSide"></span>
-        </span>
+      <header>[[[dex_order_details]]]</header>
+      <div>
+        <table class="compact">
+          <tr>
+            <td class="grey">[[[ID]]]</td>
+            <td><span><span id="dexOrderID" class="ease-color"></span><span id="copyDexOrderID" class="ease-color ico-copy mx-1 pt-0"></span></span></td>
+          </tr>
+          <tr>
+            <td class="grey">[[[Rate]]]</td>
+            <td><span id="dexOrderRate"></span></td>
+          </tr>
+          <tr>
+            <td class="grey">[[[Quantity]]]</td>
+            <td><span id="dexOrderQty"></span></td>
+          </tr>
+          <tr>
+            <td class="grey">[[[Side]]]</td>
+            <td><span id="dexOrderSide"></span></td>
+          </tr>
+        </table>
         <table id="dexOrderTxsTable" class="mt-3 striped row-hover compact border row-border">
           <thead>
             <th scope="col">[[[ID]]]</th>
@@ -79,7 +141,7 @@
           </thead>
           <tbody id="dexOrderTxsTableBody">
             <tr id="dexOrderTxRowTmpl">
-              <td data-tmpl="id"></td>
+              <td><span data-tmpl="id"></span> <a data-tmpl="explorerLink" target="_blank"><span class="mx-1 ico-open"></span></a></td>
               <td data-tmpl="type"></td>
               <td data-tmpl="amt"></td>
               <td data-tmpl="fees"></td>
@@ -89,94 +151,98 @@
       </div>
     </form>
 
-    <form id="cexOrderDetailsForm" class="position-relative flex-center flex-column fs20 d-hide">
+    <form id="cexOrderDetailsForm" class="position-relative flex-stretch-column d-hide">
       <div class="form-closer hoverbg"><span class="ico-cross"></span></div>
-      <header>
-          [[[cex_order_details]]]
-      </header>
-      <div class="flex-stretch-column">
-        <span class="d-flex justify-content-between w-100">
-          <span>[[[ID]]]</span>
-          <span id="cexOrderID"></span>
-        </span>
-        <span class="d-flex justify-content-between w-100">
-          <span>[[[Rate]]]</span>
-          <span id="cexOrderRate"></span>
-        </span>
-        <span class="d-flex justify-content-between w-100">
-          <span>[[[Quantity]]]</span>
-          <span id="cexOrderQty"></span>
-        </span>
-        <span class="d-flex justify-content-between w-100">
-          <span>[[[Side]]]</span>
-          <span id="cexOrderSide"></span>
-        </span>
-        <span class="d-flex justify-content-between w-100">
-          <span>[[[base_filled]]]</span>
-          <span id="cexOrderBaseFilled"></span>
-        </span>
-        <span class="d-flex justify-content-between w-100">
-          <span>[[[quote_filled]]]</span>
-          <span id="cexOrderQuoteFilled"></span>
-        </span>
+      <header>[[[cex_order_details]]]</header>
+      <div>
+        <table class="compact">
+          <tr>
+            <td class="grey">[[[ID]]]</td>
+            <td> <span><span id="cexOrderID" class="ease-color"></span><span id="copyCexOrderID" class="ease-color ico-copy mx-1 pt-0"></span></span></td>
+          </tr>
+          <tr>
+            <td class="grey">[[[Rate]]]</td>
+            <td><span id="cexOrderRate"></span></td>
+          </tr>
+          <tr>
+            <td class="grey">[[[Quantity]]]</td>
+            <td><span id="cexOrderQty"></span></td>
+          </tr>
+          <tr>
+            <td class="grey">[[[Side]]]</td>
+            <td><span id="cexOrderSide"></span></td>
+          </tr>
+          <tr>
+            <td class="grey">[[[base_filled]]]</td>
+            <td><span id="cexOrderBaseFilled"></span></td>
+          </tr>
+          <tr>
+            <td class="grey">[[[quote_filled]]]</td>
+            <td><span id="cexOrderQuoteFilled"></span></td>
+          </tr>
+        </table>
       </div>
     </form>
 
-    <form id="depositDetailsForm" class="position-relative flex-center flex-column fs20 d-hide">
+    <form id="depositDetailsForm" class="position-relative flex-stretch-column d-hide">
       <div class="form-closer hoverbg"><span class="ico-cross"></span></div>
       <header>
           [[[deposit_details]]]
       </header>
-      <div class="flex-stretch-column">
-        <span class="d-flex justify-content-between w-100">
-          <span>[[[ID]]]</span>
-          <span id="depositID"></span>
-        </span>
-        <span class="d-flex justify-content-between w-100">
-          <span>[[[Amount]]]</span>
-          <span id="depositAmt"></span>
-        </span>
-        <span class="d-flex justify-content-between w-100">
-          <span>[[[Fees]]]</span>
-          <span id="depositFees"></span>
-        </span>
-        <span class="d-flex justify-content-between w-100">
-          <span>[[[Status]]]</span>
-          <span id="depositStatus"></span>
-        </span>
-        <span id="depositCreditSection" class="d-flex justify-content-between w-100">
-          <span>[[[credited_amt]]]</span>
-          <span id="depositCredit"></span>
-        </span>
+      <div>
+        <table class="compact">
+          <tr>
+            <td class="grey">[[[ID]]]</td>
+            <td><span><span id="depositID" class="ease-color" ></span><span id="copyDepositID" class="ease-color ico-copy mx-1 pt-0"></span></span></td>
+          </tr>
+          <tr>
+            <td class="grey">[[[Amount]]]</td>
+            <td><span id="depositAmt"></span></td>
+          </tr>
+          <tr>
+            <td class="grey">[[[Fees]]]</td>
+            <td><span id="depositFees"></span></td>
+          </tr>
+          <tr>
+            <td class="grey">[[[Status]]]</td>
+            <td><span id="depositStatus"></span></td>
+          </tr>
+          <tr id="depositCreditSection" class="d-hide">
+            <td class="grey">[[[credited_amt]]]</td>
+            <td><span id="depositCredit"></span></td>
+          </tr>
+        </table>
       </div>
     </form>
 
-    <form id="withdrawalDetailsForm" class="position-relative flex-center flex-column fs20 d-hide">
+    <form id="withdrawalDetailsForm" class="position-relative flex-stretch-column d-hide">
       <div class="form-closer hoverbg"><span class="ico-cross"></span></div>
       <header>
           [[[withdrawal_details]]]
       </header>
-      <div class="flex-stretch-column">
-        <span class="d-flex justify-content-between w-100">
-          <span>[[[ID]]]</span>
-          <span id="withdrawalID"></span>
-        </span>
-        <span class="d-flex justify-content-between w-100">
-          <span>[[[Amount]]]</span>
-          <span id="withdrawalAmt"></span>
-        </span>
-        <span class="d-flex justify-content-between w-100">
-          <span>[[[Status]]]</span>
-          <span id="withdrawalStatus"></span>
-        </span>
-        <span class="d-flex justify-content-between w-100">
-          <span>[[[tx_id]]]</span>
-          <span id="withdrawalTxID"></span>
-        </span>
-        <span class="d-flex justify-content-between w-100">
-          <span>[[[amt_received]]]</span>
-          <span id="withdrawalReceived"></span>
-        </span>
+      <div>
+        <table class="compact">
+          <tr>
+            <td class="grey">[[[ID]]]</td>
+            <td><span><span id="withdrawalID" class="ease-color"></span><span id="copyWithdrawalID" class="ease-color ico-copy mx-1 pt-0"></span></span></td>
+          </tr>
+          <tr>
+            <td class="grey">[[[Amount]]]</td>
+            <td><span id="withdrawalAmt"></span></td>
+          </tr>
+          <tr>
+            <td class="grey">[[[Status]]]</td>
+            <td><span id="withdrawalStatus"></span></td>
+          </tr>
+          <tr>
+            <td class="grey">[[[tx_id]]]</td>
+            <td><span id="withdrawalTxID"></span></td>
+          </tr>
+          <tr>
+            <td class="grey">[[[amt_received]]]</td>
+            <td><span id="withdrawalReceived"></span></td>
+          </tr>
+        </table>
       </div>
     </form>
   </div>
