--- a/client/webserver/site/src/html/wallets.tmpl
+++ b/client/webserver/site/src/html/wallets.tmpl
@@ -373,7 +373,7 @@
                       </td>
                       <td>
                         <span data-tmpl="age"></span>
-                        <div data-tmpl="pending" class="d-hide"><span>[[[Pending]]]</span><div class="px-2 ico-spinner spinner fs-14 d-inline-block"></div></div>
+                        <div data-tmpl="pending" class="d-hide"><span>[[[Mempool]]]</span><div class="px-2 ico-spinner spinner fs-14 d-inline-block"></div></div>
                       </td>
                       <td class="d-none d-md-table-cell d-xl-none d-xxl-table-cell">
                         <span data-tmpl="fees"></span>
