--- a/client/webserver/site/src/css/market.scss
+++ b/client/webserver/site/src/css/market.scss
@@ -512,50 +512,9 @@ div[data-handler=markets] {
   margin: 0 5px;
   gap: 15px;
 
-  .data-point {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    margin-left: 20px;
-    font-size: 18px;
-    line-height: 1.25;
-
-    span.label {
-      font-family: $demi-sans;
-      font-size: 15px;
-    }
-  }
-
-  .twentyfour {
-    .data-point {
-      margin-left: 0;
-
-      & > * {
-        padding-right: 20px;
-      }
-
-      span.label {
-        width: 100%;
-      }
-
-      &:first-child > span.label {
-        padding-right: 5px;
-        padding-left: 5px;
-      }
-
-      &:nth-child(3),
-      &:nth-child(4) {
-        align-items: flex-end;
-
-        span.label {
-          text-align: right;
-        }
-      }
-
-      &:nth-child(4) > * {
-        padding-right: 0;
-      }
-    }
+  .statgrid {
+    display: grid;
+    grid-template-columns: auto auto auto;
   }
 
   &.listopen .ico-arrowdown {
