mixing: Unlock wallets first.

--- a/client/webserver/site/src/html/wallets.tmpl
+++ b/client/webserver/site/src/html/wallets.tmpl
@@ -1105,6 +1105,9 @@
         <li>
           [[[privacy_optional]]]
         </li>
+        <li>
+          [[[privacy_unlocked]]]
+        </li>
       </ul>
     </form>
   </div>
