--- a/client/webserver/site/src/html/mmsettings.tmpl
+++ b/client/webserver/site/src/html/mmsettings.tmpl
@@ -484,6 +484,20 @@
                       <span data-fee-ticker></span> per lot
                     </span>
                   </div>
+                  <div data-tmpl="redemptionFeesBox" class="flex-stretch-column">
+                    <div class="d-flex align-items-end justify-content-end">
+                      <span class="fs14 grey me-1">+</span>
+                      <span data-tmpl="redemptionFeesLots" class="fs16"></span>
+                      <span class="fs14 grey ms-1">redeems</span>
+                    </div>
+                    <div class="d-flex align-items-end justify-content-end">
+                      <span class="fs14 grey me-1">x</span>
+                      <span data-tmpl="redemptionFeesPerLot" class="fs16"></span>
+                      <span class="fs14 grey ms-1">
+                        <span data-fee-ticker></span> per redeem
+                      </span>
+                    </div>
+                  </div>
                   <div class="d-flex align-items-end justify-content-end">
                     <span class="fs14 grey me-1">=</span>
                     <span data-tmpl="bookingFees" class="fs16"></span>
