mm: Fix multi split option related bugs
The multi split option was not available on BTC clones. Also, the multi
split buffer option was available on base assets, but it should only be
available for quote assets.

--- a/client/webserver/site/src/html/mmsettings.tmpl
+++ b/client/webserver/site/src/html/mmsettings.tmpl
@@ -534,7 +534,7 @@
               <div class="col-12 px-3 py-2 flex-stretch-column">
                 <div class="d-flex align-items-center">
                   <span class="ico-settings fs15 pe-2"></span>
-                  <span class="fs18">Wallet Options</span>
+                  <span class="fs18">[[[Wallet Options]]]</span>
                 </div>
                 <div data-tmpl="walletSettingsNone" class="text-center p-2 my-2 border-top border-bottom rounded3">no settings available</div>
                 <div data-tmpl="walletSettings" class="flex-stretch-column fs15">
