eth,polygon: Fix default provider bugs
- On some providers, unsubcribing from header notifications was hanging.
Added a timeout to avoid this.
- When reconfiguring, all default providers were required to connect. This
is updated to only require all providers to connect if they are user
configured.
- The button saying to configure an RPC provider on the wallets page had
no action attached to it. Clicking it now displays the reconfigure popup.

--- a/client/webserver/site/src/html/wallets.tmpl
+++ b/client/webserver/site/src/html/wallets.tmpl
@@ -147,7 +147,7 @@
                   <div class="mt-2 text-justify">[[[add_provider_tooltip]]]</div>
                   <button id="needsProviderBttn" class="flex-center mt-2 lh1 fs17">
                     <span class="ico-disconnected text-warning demi me-2"></span>
-                    <span>Add a custom API provider</span>
+                    <span>[[[add_custom_rpc_provider]]]</span>
                   </button>
                 </div>
               </div>
