scale booking fees by order reserves. allow starting with insufficient fee avail

--- a/client/webserver/site/src/html/mmsettings.tmpl
+++ b/client/webserver/site/src/html/mmsettings.tmpl
@@ -484,6 +484,11 @@
                       <span data-fee-ticker></span> per lot
                     </span>
                   </div>
+                  <div class="d-flex align-items-end justify-content-end">
+                    <span class="fs14 grey me-1">x</span>
+                    <span data-tmpl="swapReservesFactor" class="fs16"></span>
+                    <span class="fs14 grey ms-1">reserves</span>
+                  </div>
                   <div data-tmpl="redemptionFeesBox" class="flex-stretch-column">
                     <div class="d-flex align-items-end justify-content-end">
                       <span class="fs14 grey me-1">+</span>
@@ -496,6 +501,11 @@
                       <span class="fs14 grey ms-1">
                         <span data-fee-ticker></span> per redeem
                       </span>
+                    </div>
+                    <div class="d-flex align-items-end justify-content-end">
+                      <span class="fs14 grey me-1">x</span>
+                      <span data-tmpl="redeemReservesFactor" class="fs16"></span>
+                      <span class="fs14 grey ms-1">reserves</span>
                     </div>
                   </div>
                   <div class="d-flex align-items-end justify-content-end">
