more cex reconfig buttons

--- a/client/webserver/site/src/html/bodybuilder.tmpl
+++ b/client/webserver/site/src/html/bodybuilder.tmpl
@@ -185,7 +185,7 @@
           <button data-tmpl="doNothingBttn" class="flex-grow-1 me-2 danger">Do Nothing</button>
           <button data-tmpl="recoverBttn" class="flex-grow-1 ms-2">Attempt Recovery</button>
         </div>
-        <div data-tmpl="errMsg" class="p-2 errcolor d-hide"></div>
+        <div data-tmpl="errMsg" class="p-2 text-warning d-hide"></div>
       </div>
 
       <div id="tooCheapTmpl" class="flex-stretch-column mt-2">
@@ -199,7 +199,7 @@
           <button data-tmpl="keepWaitingBttn" class="flex-grow-1 me-2">Keep Waiting</button>
           <button data-tmpl="addFeesBttn" class="flex-grow-1 ms-2">Add Fees</button>
         </div>
-        <div data-tmpl="errMsg" class="p-2 errcolor d-hide"></div>
+        <div data-tmpl="errMsg" class="p-2 text-warning d-hide"></div>
       </div>
 
       <div id="lostNonceTmpl" class="flex-stretch-column mt-2">
@@ -221,7 +221,7 @@
           <input type="text" data-tmpl="idInput" class="flex-grow-1">
           <button data-tmpl="replaceBttn" class="ms-2">Submit</button>
         </div>
-        <div data-tmpl="errMsg" class="p-2 errcolor d-hide"></div>
+        <div data-tmpl="errMsg" class="p-2 text-warning d-hide"></div>
       </div>
 
       <div id="rejectedRedemptionTmpl" class="flex-stretch-column mt-2">
@@ -241,7 +241,7 @@
             Find technical support
           </a>
         </div>
-        <div data-tmpl="errMsg" class="p-2 errcolor mt-2 d-hide"></div>
+        <div data-tmpl="errMsg" class="p-2 text-warning mt-2 d-hide"></div>
       </div>
 
     </div>
