--- a/client/webserver/site/src/html/mm.tmpl
+++ b/client/webserver/site/src/html/mm.tmpl
@@ -73,11 +73,12 @@
                           <span data-tmpl="usdBalance"></span>
                           <span class="grey fs15 ms-1">USD</span>
                         </div>
+                        <button data-tmpl="reconfigBttn" class="ico-settings ms-2"></button>
                       </div>
                     </td>
                     <td data-tmpl="connectErrBox" class="d-hide pe-3">
-                      <span data-tmpl="connectErr" class="errcolor"></span>
-                      <button data-tmpl="reconfigureBttn" class="ico-settings ms-2 d-hide"></button>
+                      <span data-tmpl="connectErr" class="text-warning"></span>
+                      <button data-tmpl="errConfigureBttn" class="ico-settings ms-2"></button>
                     </td>
                   </tr>
                 </tbody>
