--- a/client/webserver/site/src/html/mmsettings.tmpl
+++ b/client/webserver/site/src/html/mmsettings.tmpl
@@ -338,7 +338,7 @@
             <div>
               <button id="deleteBttn" class="danger">Delete This Program</button>
             </div>
-            <div id="deleteErr" class="errcolor pt-2 d-hide"></div>
+            <div id="deleteErr" class="text-warning pt-2 d-hide"></div>
           </div>
         </div>
       </section>
