--- a/client/webserver/site/src/html/mmsettings.tmpl
+++ b/client/webserver/site/src/html/mmsettings.tmpl
@@ -338,7 +338,7 @@
             <div>
               <button id="deleteBttn" class="danger">Delete This Program</button>
             </div>
-            <div id="deleteErr" class="errcolor pt-2 d-hide"></div>
+            <div id="deleteErr" class="text-warning pt-2 d-hide"></div>
           </div>
         </div>
       </section>
@@ -483,6 +483,30 @@
                     <span class="fs14 grey ms-1">
                       <span data-fee-ticker></span> per lot
                     </span>
+                  </div>
+                  <div class="d-flex align-items-end justify-content-end">
+                    <span class="fs14 grey me-1">x</span>
+                    <span data-tmpl="swapReservesFactor" class="fs16"></span>
+                    <span class="fs14 grey ms-1">reserves</span>
+                  </div>
+                  <div data-tmpl="redemptionFeesBox" class="flex-stretch-column">
+                    <div class="d-flex align-items-end justify-content-end">
+                      <span class="fs14 grey me-1">+</span>
+                      <span data-tmpl="redemptionFeesLots" class="fs16"></span>
+                      <span class="fs14 grey ms-1">redeems</span>
+                    </div>
+                    <div class="d-flex align-items-end justify-content-end">
+                      <span class="fs14 grey me-1">x</span>
+                      <span data-tmpl="redemptionFeesPerLot" class="fs16"></span>
+                      <span class="fs14 grey ms-1">
+                        <span data-fee-ticker></span> per redeem
+                      </span>
+                    </div>
+                    <div class="d-flex align-items-end justify-content-end">
+                      <span class="fs14 grey me-1">x</span>
+                      <span data-tmpl="redeemReservesFactor" class="fs16"></span>
+                      <span class="fs14 grey ms-1">reserves</span>
+                    </div>
                   </div>
                   <div class="d-flex align-items-end justify-content-end">
                     <span class="fs14 grey me-1">=</span>
