webserver: Fix manage peer view (#2805)
* webserver: fix manage peer view
* html: add type text to addPeerInput

---------

Signed-off-by: Philemon Ukane <ukanephilemon@gmail.com>

--- a/client/webserver/site/src/html/wallets.tmpl
+++ b/client/webserver/site/src/html/wallets.tmpl
@@ -705,7 +705,7 @@
       </div>
 
       <div class="d-flex justify-content-end">
-        <input type="text" id="addPeerInput">
+        <input id="addPeerInput" type="text" placeholder="[[[enter_peer_address]]]">
         <button id="addPeerSubmit" type="button" class="feature ms-2">[[[add_peer]]]</button>
       </div>
       <div id="peerSpinner" class="flex-center position-relative d-hide">
