handle cex connect errors better

--- a/client/webserver/site/src/html/mm.tmpl
+++ b/client/webserver/site/src/html/mm.tmpl
@@ -77,7 +77,7 @@
                       </div>
                     </td>
                     <td data-tmpl="connectErrBox" class="d-hide pe-3">
-                      <span data-tmpl="connectErr" class="text-warning"></span>
+                      <span data-tmpl="connectErr" class="text-warning" data-tooltip></span>
                       <button data-tmpl="errConfigureBttn" class="ico-settings ms-2"></button>
                     </td>
                   </tr>
