--- a/client/webserver/site/src/html/bodybuilder.tmpl
+++ b/client/webserver/site/src/html/bodybuilder.tmpl
@@ -110,6 +110,10 @@
         <div id="langBttnTmpl" class="pointer fs18 me-2"></div>
       </div>
     </div>
+    <a href="https://github.com/decred/dcrdex" class="demi hoverbright plainlink d-flex align-items-center py-1"  target="_blank">
+      <span class="ico-open fs16 me-2"></span>
+      Homepage / Docs
+    </a>
     <div class="demi hoverbright pointer d-flex align-items-center py-1 authed-only" id="profileSignout">
       <span class="ico-profile fs16 me-2"></span>
       [[[Sign Out]]]
