--- a/client/webserver/site/src/html/forms.tmpl
+++ b/client/webserver/site/src/html/forms.tmpl
@@ -781,7 +781,7 @@
   [[[Available fee balance]]]: <span data-tmpl="balance" class="ms-2"></span> <span data-tmpl="parentTicker" class="grey ms-1"></span>
 </div>
 <div data-tmpl="addressBox" class="flex-center fs15 d-hide">
-  [[[approve_token_wallet_addr]]] <span data-tmpl="address" class="ms-2"></span>
+  [[[approve_token_wallet_addr]]] <span data-tmpl="address" class="ms-2 px-2"></span>
 </div>
 {{end}}
 
