--- a/client/webserver/site/src/html/mmsettings.tmpl
+++ b/client/webserver/site/src/html/mmsettings.tmpl
@@ -11,6 +11,16 @@
     </div>
     <span class="fs18">[[[Loading market data]]]</span>
   </div>
+  <div id="missingFiatRates" class="flex-column flex-center flex-grow-1">
+    <div class="flex-center">
+      <span class="text-warning fs28 demi me-2">!</span>
+      <span class="fs22">Missing fiat exchange rates</span>
+    </div>
+    <div class="mt-2 mw-425">
+      Enable external fiat rate sources in
+      <a href="/settings">settings</a>
+    </div>
+  </div>
   <div id="botSettingsContainer" class="flex-grow-1 d-flex flex-wrap d-hide">
 
     {{- /* PLACEMENTS */ -}}
