--- a/client/webserver/site/src/html/wallets.tmpl
+++ b/client/webserver/site/src/html/wallets.tmpl
@@ -399,7 +399,7 @@
                     </tr>
                   </tbody>
                 </table>
-                <span id="earlierTxs">[[[load_earlier_transactions]]]</span>
+                <span id="earlierTxs" class="mx-2">[[[load_earlier_transactions]]]</span>
               </div>
               <div class="flex-center p-2 mb-3 mx-3 fs18 border rounded3 d-hide" id="noTxHistory">
                 [[[no_tx_history]]]
