--- a/client/webserver/site/src/html/mm.tmpl
+++ b/client/webserver/site/src/html/mm.tmpl
@@ -408,6 +408,18 @@
                   </div>
                 </div>
 
+                {{- /* NO FIAT RATES */ -}}
+                <div data-tmpl="noFiatDisplay" class="flex-center flex-column p-3 mt-2 border-top d-hide">
+                  <div class="flex-center">
+                    <span class="text-warning fs28 demi me-2">!</span>
+                    <span class="fs22">Missing fiat exchange rates</span>
+                  </div>
+                  <div class="mt-25">
+                    Enable external fiat rate sources in
+                    <a href="/settings">settings</a>
+                  </div>
+                </div>
+
                 {{- /* ALLOCATE AND START */ -}}
                 <div data-tmpl="allocationDialog"
                     class="fill-abs z10 section-bg flex-stretch-column d-hide px-3 mt-2 border-top">
