--- a/client/webserver/site/src/css/forms.scss
+++ b/client/webserver/site/src/css/forms.scss
@@ -284,7 +284,8 @@ div[data-handler=register] {
 #reconfigForm,
 #authorizeSeedDisplay,
 #seedBackupForm,
-#votingForm {
+#votingForm,
+#gameCodeForm {
   width: 425px;
 }
 
